# mwe-dune-pkg-pin-make

.github/workflows/: ci.yml
dep/: .gitignore  Makefile  dep.opam  dune-project
main/: .gitignore  dune-project  main.opam
