(lang dune 3.18)

(name main)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(pin
 (url "../dep/")
 (package
  (name dep)))

(documentation https://url/to/documentation)

(package
 (name main)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dep)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
